# rabbit-rpc-py

./: .gitignore  Makefile  README.md  pyproject.toml
rabbit_rpc_py/: client.py  helpers.py  server.py
tests/: test_client.py  test_server.py
