[tool.poetry]
name = "rabbit-rpc-py"
version = "0.4.0"
description = "amqp rabbit rpc"
authors = ["Arvin <arvintian8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
pretty-logging = "^1.0"
pika = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
